# pypsrp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  New-PSSessionLogger.ps1  README.md  Vagrantfile  appveyor.yml  azure-pipelines.yml  jordan.py  named-pipe.pcapng  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  setup.cfg  setup.py  test.ps1  tls_client.py  tls_server.py  tox.ini  wef_listener.py  wef_listener2.py
.github/workflows/: ci.yml
appveyor/: JEARoleSettings.pssc  setup.ps1
build-scripts/: install_gssntlmssp.sh
build_helpers/: check-winrm.py  lib.sh  run-ci.sh  win-setup.ps1
ci/: JEARole.psrc  setup.ps1
docs/: ConvertTo-PythonClass.ps1  Makefile  conf.py  index.rst  make.bat  types.md
psrp/: __init__.py  _compat.py  _runspace.py  _transport.py  connection_info.py  exceptions.py  host.py  powershell.py  winrs.py  wsman.py
psrp/_http/: connection.py
psrp/_wsman/: __init__.py  _async.py  _auth.py  _bytestreams.py  _connection.py  _encryption.py  _utils.py
psrp/dotnet/: complex_types.py  crypto.py  primitive_types.py  ps_base.py  psrp_messages.py  serializer.py
psrp/io/: process.py  ssh.py  wsman.py
psrp/protocol/: crypto.py  powershell.py  powershell_events.py  winrs.py  wsman.py
pypsrp/: __init__.py  _http_authentication.py  _transport.py  _utils.py  client.py  complex_objects.py  dotnet.py  encryption.py  exceptions.py  host.py  messages.py  named_pipe.py  negotiate.py  out_of_proc.py  out_of_process.py  powershell.py  serializer.py  shell.py  spgnego.py  spnego.py  ssh.py  transport.py  wsman.py
pypsrp/pwsh_scripts/: copy.ps1  fetch.ps1
src/psrp/: __init__.py  _async.py  _client.py  _compat.py  _exceptions.py  _host.py  _sync.py  _winrs.py  _wsman.py
src/psrp/_connection/: _win32.py  connection.py  named_pipe.py  out_of_proc.py  process.py  ssh.py  wsman.py
src/psrp/_io/: wsman.py
src/psrp/_pwsh/: copy.ps1  fetch.ps1
src/psrp/_wsman/: __init__.py  _auth.py  _client.py  _exceptions.py  _http.py  _http_proxy.py  _protocol.py  _proxy.py  _socks.py  _tls.py  _winrs.py  events.py  exceptions.py
src/pypsrp/: __init__.py  _pool_manager.py  _utils.py  client.py  complex_objects.py  encryption.py  exceptions.py  host.py  messages.py  negotiate.py  powershell.py  serializer.py  shell.py  wsman.py
tests/: __init__.py  adhoc.py  conftest.py  constraints.txt  runner.py  test_adhoc.py  test_client.py  test_complex_objects.py  test_dotnet.py  test_encryption.py  test_exceptions.py  test_host.py  test_integration.py  test_messages.py  test_negotiate.py  test_powershell.py  test_serializer.py  test_shell.py  test_spnego.py  test_transport.py  test_utils.py  test_wsman.py
tests/data/: test_sanitise_clixml_with_error.xml
tests/psrp/dotnet/: test_complex_types.py  test_primitive_types.py  test_ps_base.py  test_psrp_messages.py  test_serializer.py
tests/psrp/protocol/: test_powershell.py
tests/responses/: _template.yml  test_client_copy_expand_vars.yml  test_client_copy_file.yml  test_client_copy_file_double_payload.yml  test_client_copy_file_empty.yml  test_client_copy_file_failure.yml  test_client_copy_file_quad_payload.yml  test_client_copy_file_really_large.yml  test_client_copy_file_warning.yml  test_client_execute_ps.yml  test_client_execute_ps_environment.yml  test_client_execute_ps_failure.yml  test_client_fetch_file.yml  test_client_fetch_file_fail_dir.yml  test_client_fetch_file_fail_missing.yml  test_client_fetch_file_hash_mismatch.yml  test_psrp_application_args.yml  test_psrp_clear_commands.yml  test_psrp_disconnect_runspaces.yml  test_psrp_disconnected_commands.yml  test_psrp_error_failed.yml  test_psrp_get_command_metadata.yml  test_psrp_key_exchange_timeout.yml  test_psrp_long_running_cmdlet.yml  test_psrp_merge_commands.yml  test_psrp_multiple_commands.yml  test_psrp_nested_command.yml  test_psrp_open_runspace.yml  test_psrp_pshost_methods.yml  test_psrp_pshost_raw_ui_mocked_methods.yml  test_psrp_pshost_ui_mocked_methods.yml  test_psrp_receive_failure.yml  test_psrp_reset_runspace_state.yml  test_psrp_reset_runspace_state_fail.yml  test_psrp_run_protocol_version_2.1.yml  test_psrp_run_protocol_version_2.2.yml  test_psrp_run_protocol_version_2.3.yml  test_psrp_set_runspaces.yml  test_psrp_small_msg_size.yml  test_psrp_stream_no_output_invocation.yml  (+20 more)
tests/tests_psrp/: conftest.py  test_async.py  test_client.py  test_connection.py  test_connection_win32.py  test_exceptions.py  test_host.py  test_io_wsman.py  test_out_of_proc.py  test_sync.py  test_winrs.py  test_wsman.py  test_wsman_integration.py
tests/tests_psrp/tests_wsman/: test_auth.py  test_exceptions.py  test_integration.py  test_io_wsman.py  test_tls.py  test_winrs.py  test_wsman.py
tests/tests_pypsrp/: __init__.py  conftest.py  test_client.py  test_complex_objects.py  test_encryption.py  test_exceptions.py  test_host.py  test_integration.py  test_negotiate.py  test_powershell.py  test_serializer.py  test_shell.py  test_utils.py  test_wsman.py
tests/tests_pypsrp/data/: test_sanitise_clixml_with_no_errors.xml
tests/tests_pypsrp/responses/: _template.yml  test_client_copy_file_failure.yml  test_client_copy_file_warning.yml  test_client_execute_cmd.yml  test_client_execute_cmd_environment.yml  test_client_fetch_file_expand_vars.yml  test_psrp_disconnect_runspaces.yml  test_psrp_get_command_metadata.yml  test_psrp_is_alive_http_error.yml  test_psrp_is_alive_invalid_selectors.yml  test_psrp_is_alive_other_wsman_error.yml  test_psrp_is_alive_state_disconnected.yml  test_psrp_key_exchange_timeout.yml  test_psrp_long_running_cmdlet.yml  test_psrp_merge_commands.yml  test_psrp_multiple_invocations.yml  test_psrp_no_profile.yml  test_psrp_pshost_raw_ui_mocked_methods.yml  test_psrp_reset_runspace_state.yml  test_psrp_reset_runspace_state_fail.yml  test_psrp_run_protocol_version_2.1.yml  test_psrp_run_protocol_version_2.2.yml  test_psrp_small_msg_size.yml  test_psrp_stream_no_output_invocation.yml  test_psrp_with_history.yml  (+10 more)
wef/: generate_client_cert.sh
wsman/_async/: transport.py
