[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "build/"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
show_error_codes = true
show_column_numbers = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "psrp.*"
disallow_untyped_decorators = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "psrp._compat"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "psrp._connection.named_pipe"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "psrp._connection._win32"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "asyncssh.*"
implicit_reexport = true  # asyncssh does not explicitly export these symbols

[[tool.mypy.overrides]]
module = "requests.packages.urllib3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_credssp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xmldiff"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
junit_family = "xunit2"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = lint,py36,py37,py38,py39,py310
skip_missing_interpreters = true
isolated_build = True

[testenv]
deps =
    -r{toxinidir}/requirements-dev.txt

commands =
    python -m pytest tests/tests_psrp -v --cov psrp --cov-report term-missing

passenv =
    PYPSRP_*

[testenv:lint]
commands =
    python -m black . --check
    python -m isort . --check-only
    python -m mypy .
"""
