[build-system]
requires = [
    "setuptools >= 68.1.0",  # Support for setuptools config in pyproject.toml out of beta
]
build-backend = "setuptools.build_meta"

[project]
name = "pypsrp"
version = "1.0.0b2"
description = "PowerShell Remoting Protocol and WinRM for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    { name = "Jordan Borean", email = "jborean93@gmail.com" }
]
keywords = ["winrm", "psrp", "winrs", "windows", "powershell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "cryptography",
    "httpcore[asyncio] > 1.0.0, < 2.0.0",
    "psrpcore >= 0.1.2",
    "pyspnego >= 0.8.0, < 1.0.0",  # 0.8.0 added cbt support for step()
    "requests >= 2.9.1",  # Old pypsrp namespace
    "truststore; python_version >= '3.10'"  # Older versions use httpcore defaults
]

[project.urls]
homepage = "https://github.com/jborean93/pypsrp"

[project.optional-dependencies]
credssp = [
    "requests-credssp >= 2.0.0"
]
kerberos = [
    "pyspnego[kerberos]"
]
named_pipe = [
    "psutil"
]
ssh = [
    "asyncssh"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
psrp = ["py.typed"]
"psrp._pwsh" = ["*.ps1"]
pypsrp = ["py.typed"]
"pypsrp.pwsh_scripts" = ["*.ps1"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "build/"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
show_error_codes = true
show_column_numbers = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "psrp.*"
disallow_untyped_decorators = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "psrp._connection.named_pipe"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "psrp._connection._win32"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "asyncssh.*"
implicit_reexport = true  # asyncssh does not explicitly export these symbols

[[tool.mypy.overrides]]
module = "requests.packages.urllib3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_credssp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xmldiff"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
junit_family = "xunit2"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = lint,py36,py37,py38,py39,py310
skip_missing_interpreters = true
isolated_build = True

[testenv]
deps =
    -r{toxinidir}/requirements-dev.txt

commands =
    python -m pytest tests/tests_psrp -v --cov psrp --cov-report term-missing

passenv =
    PYPSRP_*

[testenv:lint]
commands =
    python -m black . --check
    python -m isort . --check-only
    python -m mypy .
"""
