[build-system]
requires = [
    "setuptools >= 77.0.0", # license and license-files alignment
]
build-backend = "setuptools.build_meta"

[project]
name = "pypsrp"
version = "0.9.0rc2"
description = "PowerShell Remoting Protocol and WinRM for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jordan Borean", email = "jborean93@gmail.com" }
]
keywords = ["winrm", "psrp", "winrs", "windows", "powershell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "cryptography >= 3.1",  # default_backend made an optional kwarg
    "pyspnego >= 0.7.0, < 1.0.0",
    "requests >= 2.9.1",
]

[project.urls]
homepage = "https://github.com/jborean93/pypsrp"

[project.optional-dependencies]
credssp = [
    "requests-credssp >= 2.0.0",
]
kerberos = [
    "pyspnego[kerberos]",
]
dev = [
    "black == 25.11.0",
    "build",
    "isort == 6.1.0",
    "mypy == 1.19.0",
    "pre-commit",
    "pyspnego[kerberos]",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "PyYAML",
    "requests-credssp",
    "types-requests",
    "types-PyYAML",
    "xmldiff",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pypsrp = ["py.typed"]
"pypsrp.pwsh_scripts" = ["*.ps1"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "build/"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
show_error_codes = true
show_column_numbers = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["requests.packages.urllib3.*", "requests_credssp", "xmldiff"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
junit_family = "xunit2"
