[metadata]
name = pypsrp
version = 1.0.0b2
url = https://github.com/jborean93/pypsrp
author = Jordan Borean
author_email = jborean93@gmail.com
license = MIT
license_files = LICENSE
description = PowerShell Remoting Protocol and WinRM for Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    winrm
    psrp
    winrs
    windows
    powershell
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = True
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.7
install_requires =
    cryptography
    httpcore < 1.0.0
    httpx < 1.0.0
    psrpcore >= 0.1.2
    pyspnego >= 0.7.0, < 1.0.0
    requests >= 2.9.1
    typing_extensions; python_version<"3.8"

[options.packages.find]
where = src

[options.package_data]
psrp = py.typed
psrp._pwsh = *.ps1
pypsrp = py.typed
pypsrp.pwsh_scripts = *.ps1

[options.extras_require]
credssp =
    requests-credssp>=2.0.0
kerberos =
    pyspnego[kerberos]
named_pipe =
    psutil
ssh =
    asyncssh
